--- a/css/registercheetahG1.css
+++ b/css/registercheetahG1.css
@@ -14,6 +14,17 @@
 	
 }
 
+.jumpLeft{
+	padding-top:150px;
+}
+
+.jumpRight{
+	width:125px; 
+	margin-top:220px;
+	background: #5dae0d;
+	box-shadow: 0px 4px 0px 0px rgb(68,128,10);
+}
+
 .app-image-div{
 	margin-top: 11%; 
 	width: 80px; 
@@ -31,7 +42,9 @@
 }
 .label{
 	background-color: #ffffff;
-	width: 16%;
+	width: 25%;
+	padding-top:5px;
+	padding-left:8px;
 	height: 31.5px;
 	line-height: 31px;
 	font-family: Arial;
@@ -46,13 +59,13 @@
 
 .scanPropertyElementStyle{
 	background-color: #ffffff;
-	width: 84%;
+	width: 65%;
 	height: 33.5px;
 	float: left;
 	margin-top:-10px;
 }
 .scanFormTextInput {
-	width:100%;
+	width:90%;
 	height:28px;
 	background: #ffffff;
 	border: 1px solid #dcdcdc;
@@ -338,17 +351,23 @@ color:#333333;
 	border-left-color:#444444;
 	border-right-color: #000000;
 }
+
 .scanButtonDivStyle{
 	background-color:#E9ECE9;
-	margin-left:-15px;
-	margin-top:272px;
+	margin-left:0px;
+	margin-top:255px;
 	height:55px;
-	width:600px;
+	width:400px;
 	padding-top:3px;
 }
+
+.scanButtonLeftPadding{
+	width:120px;
+}
+
 .scanButtonStyle {
 	margin-top:4px;
-	width:120px;
+	width:110px;
 	height:37px;
 	line-height:20px;
 	background: #5dae0d;
@@ -382,13 +401,15 @@ color:#333333;
 
 .leftPaneAlignmentStyle{
 	float: left;
-	width:17.1%;
+	width: 40%;
 }
 
 .rightPaneAlignmentStyle{
 	background-color: #ffffff;
-	width: 74.3%;
-	height:341px;
+	margin-right:-15px;
+	float: right;
+	width: 60%;
+	height:320px;
 }
 
 .homeIconStyle{
@@ -508,7 +529,7 @@ white-space: nowrap;
 
 .cancelInline{
 	float: left;
-	margin-left: 250px;
+	margin-left: 80px;
 	margin-right: 30px; 
 	background: #999999;
 }
@@ -523,11 +544,11 @@ white-space: nowrap;
 	text-align: center; 
 	margin-left:-15px !important;
 	padding-left: 40px; 
-	padding-top: 10px; 
-	width: 550px; 
+	padding-top: 15px; 
+	width: 100%; 
 	background-color: #E9ECE9; 
-	height: 38px; 
-	margin-top:-14px !important;
+	height: 36px;
+	margin-top: -1px;
 }
 
 .headerSpan{
