--- a/css/registercheetahG2.css
+++ b/css/registercheetahG2.css
@@ -14,6 +14,17 @@
 	
 }
 
+.jumpLeft{
+	padding-top:250px;
+}
+
+.jumpRight{
+	width:160px; 
+	margin-top:320px;
+	background: #5dae0d;
+	box-shadow: 0px 4px 0px 0px rgb(68,128,10);
+}
+
 .app-image-div{
 	margin-top: 11%; 
 	width: 105px; 
@@ -30,27 +41,18 @@
 	border-bottom-right-radius: 5px
 }
 .label{
+	width:25%;
 	background-color: #ffffff;
-	width: 16%;
 	height: 36.5px;
+	padding-left:25px;
 	line-height: 36px;
 	font-family: Arial;
 	color:#333333;
 	font-size: 17px;
 	float: left;
-	margin-top:12px;
+	margin-top:8px;
 }
 
-/* .scanFormTextInput {
-	width:100%;
-	height:28px;
-	background: #ffffff;
-	border: 1px solid #dcdcdc;
-	border-radius: 5px;
-	box-shadow: inset 0 1px 3px rgba(0,0,0,.2);
-	font: 14px Arial; 
-	outline: none; Remove Chrome and Safari glows on focus
-} */
 
 .scanFormReadOnlyText {
 	height:43px;
@@ -103,13 +105,6 @@
 	outline: none; /*Remove Chrome and Safari glows on focus*/
 }
 
-.scanFormTextInput {
-	width:80px;
-	height:45px;
-	background: #ffffff;
-	font: 19px Arial; 
-	outline: none; /*Remove Chrome and Safari glows on focus*/
-}
 
 .fileNameLabelPadding{
 	background-color: #ffffff;
@@ -292,12 +287,19 @@ color:#333333;
 	margin-top:15px;
 }
 .scanPropertyElementStyle{
+	width: 65%;
 	background-color: #ffffff;
-	width: 84%;
 	float: left;
-	margin-top:-2px;
+	margin-top:-5px;
 }
 
+.scanFormTextInput {
+	width: 50px;
+	height:35px;
+	background: #ffffff;
+	font: 19px Arial; 
+	outline: none; /*Remove Chrome and Safari glows on focus*/
+}
 .scanPropertyRowStyle{
 	width: 100%; 
 	float: left;
@@ -309,12 +311,17 @@ color:#333333;
 .scanButtonDivStyle{
 	background-color:#E9ECE9;
 	margin-left:-15px;
-	margin-top:408px;
+	margin-top:385px;
 	height:62px;
 	width:789px;
 	padding-top:1px;
 	font-size:30px;
 }
+
+.scanButtonLeftPadding{
+	width:180px;
+}
+
 .scanButtonStyle {
 	margin-top:1.5px;
 	width:185px;
@@ -348,13 +355,14 @@ color:#333333;
 
 .leftPaneAlignmentStyle{
 	float: left;
-	width:20%;
+	width:40%;
 }
 
 .rightPaneAlignmentStyle{
 	background-color: #ffffff;
-	width: 74.1%;
-	height:491px;
+	margin-right:0px !important;
+	width: 60%;
+	height:470px;
 }
 
 .homeIconStyle{
@@ -478,7 +486,7 @@ white-space: nowrap;
 
 .cancelInline{
 	float: left;
-	margin-left: 375px;
+	margin-left: 180px;
 	margin-right: 30px; 
 	background: #999999;
 	box-shadow: 0px 4px 0px 0px rgb(153,153,153);
@@ -491,12 +499,13 @@ white-space: nowrap;
 
 .formHeader{
 	text-align: center; 
-	margin-left:-15px !important;; 
+	margin-top: 15px; 
+	margin-left: 0px; 
 	padding-left: 40px; 
-	padding-top: 10px; 
-	width:789px;
+	padding-top: 30px; 
+	width:990px;
 	background-color: #E9ECE9; 
-	height: 38px;
+	height: 45px;
 	margin-top:-14px !important;;
 }
 
