--- a/css/registercheetahG1.css
+++ b/css/registercheetahG1.css
@@ -15,14 +15,18 @@
 }
 
 .jumpLeft{
+	text-align:center;
 	padding-top:150px;
 }
 
 .jumpRight{
-	width:125px; 
-	margin-top:220px;
-	background: #5dae0d;
-	box-shadow: 0px 4px 0px 0px rgb(68,128,10);
+    width:100px; 
+	margin-top:250px;
+	background: #A9A9A9;
+}
+
+.jumpButtonLeftPadding{
+	width:80px;
 }
 
 .app-image-div{
@@ -41,10 +45,11 @@
 	border-bottom-right-radius: 5px
 }
 .label{
-	background-color: #ffffff;
+	background-color:#E9ECE9;
 	width: 25%;
 	padding-top:5px;
 	padding-left:8px;
+	margin-left: 3px;
 	height: 31.5px;
 	line-height: 31px;
 	font-family: Arial;
@@ -58,7 +63,7 @@
 }
 
 .scanPropertyElementStyle{
-	background-color: #ffffff;
+	background-color:#E9ECE9;
 	width: 65%;
 	height: 33.5px;
 	float: left;
@@ -320,6 +325,7 @@ color:#333333;
 
 
 .scanPropertyRowStyle{
+	background-color:#E9ECE9;
 	width: 100%; 
 	height: 35px; 
 	float: left;
@@ -362,7 +368,7 @@ color:#333333;
 }
 
 .scanButtonLeftPadding{
-	width:120px;
+	width:45px;
 }
 
 .scanButtonStyle {
@@ -400,15 +406,15 @@ color:#333333;
 }
 
 .leftPaneAlignmentStyle{
+	background-color: #ffffff;
 	float: left;
-	width: 40%;
+	width: 60%;
 }
 
 .rightPaneAlignmentStyle{
-	background-color: #ffffff;
+	background-color:#E9ECE9;
 	margin-right:-15px;
-	float: right;
-	width: 60%;
+	width: 40%;
 	height:320px;
 }
 
