--- a/css/registercheetahG1.css
+++ b/css/registercheetahG1.css
@@ -21,7 +21,7 @@
 
 .jumpRight{
     width:100px; 
-	margin-top:250px;
+	margin-top:240px;
 	background: #A9A9A9;
 }
 
@@ -363,7 +363,7 @@ color:#333333;
 	margin-left:0px;
 	margin-top:255px;
 	height:55px;
-	width:400px;
+	width:100%;
 	padding-top:3px;
 }
 
@@ -413,6 +413,7 @@ color:#333333;
 
 .rightPaneAlignmentStyle{
 	background-color:#E9ECE9;
+	margin-left:330px;
 	margin-right:-15px;
 	width: 40%;
 	height:320px;
