--- a/css/registercheetahG2.css
+++ b/css/registercheetahG2.css
@@ -14,6 +14,14 @@
 	
 }
 
+.jumpMessage{	
+	padding-top:120px;
+	align:center;
+	text-align:center;
+	font-size:25px !important;
+}
+
+
 .jumpLeft{
 	width:100%;
 	align:center;
@@ -23,20 +31,20 @@
 
 .jumpRight{
 	width:130px; 
-	margin-top:320px;
+	margin-top:120px;
 	background: #A9A9A9;
 }
 
 .jumpRightPaneAlignmentStyle{
 	background-color:#E9ECE9;
-	margin-left: 650px;
+	margin-left: -2px;
 	margin-right:0px !important;
-	width: 43%;
-	height:470px;
+	width: 100%;
+	height:490px;
 }
 
 .jumpButtonLeftPadding{
-	width:150px;
+	width:440px;
 }
 
 .app-image-div{
@@ -336,7 +344,7 @@ color:#333333;
 }
 
 .scanButtonLeftPadding{
-	width:40px;
+	width:220px;
 }
 
 .scanButtonStyle {
@@ -375,15 +383,15 @@ color:#333333;
 .leftPaneAlignmentStyle{
 	background-color: #ffffff;
 	float: left;
-	width:58%;
+	width:25%;
 }
 
 .rightPaneAlignmentStyle{
 	background-color:#E9ECE9;
-	margin-left: 600px;
-	margin-right:0px !important;
-	width: 43%;
-	height:470px;
+	margin-left: -10px;
+	margin-right:-10px !important;
+	width: 100%;
+	height:500px;
 }
 
 .homeIconStyle{
@@ -508,7 +516,7 @@ white-space: nowrap;
 .cancelInline{
 	float: left;
 	margin-left: 120px;
-	margin-right: 30px; 
+	margin-right: 60px; 
 	background: #999999;
 	box-shadow: 0px 4px 0px 0px rgb(153,153,153);
 }
@@ -536,6 +544,7 @@ white-space: nowrap;
 
 .inputMargin{
 	margin-top:10px;
+	margin-left:60px;
 }
 
 
