--- a/css/registercheetahG2.css
+++ b/css/registercheetahG2.css
@@ -14,13 +14,57 @@
 	
 }
 
-.jumpMessage{	
-	padding-top:120px;
+.landPageStyle{
+ 	position:absolute;top:0px;right:-2px;left:-2px;bottom:0px;
+ 	z-index:1040;display:-webkit-box;display:flex;
+ 	-webkit-box-orient:vertical;-webkit-box-direction:normal;
+ 	flex-direction:column;-webkit-box-pack:justify;
+ 	justify-content:space-between;flex-wrap:nowrap;
+ 	height:503px;background-color:#e6e6e6;
+ 	-webkit-box-shadow:0 2px 14px rgba(0,0,0,.5);
+ 	box-shadow:0 2px 14px rgba(0,0,0,.5);
+ 	border-radius:8px;
+ 	border:10px solid #3d86ff
+ }
+
+.landTableStyle{
+	margin-left: -2px;
+	margin-right:0px !important;
+	width: 100%;
+	/*height:520px;*/
+	border-spacing: 0; 
+    border-collapse: collapse;    
+}
+
+.landMessage{
+	padding-top:0px;
+	padding-left:30px;
+	font-size:28px !important;
+}
+
+.landRedButtonStyle{
+	margin-top:-10px;
+	margin-left:105px;
+	width: 150px;
+	color: white;
+	background: #FF0000;
+}
+
+.landBottomButtonStyle{	
+	width:130px; 
+	margin-left:120px;
+	color: white;
+	background: #585858;
+	margin-bottom:30px;
+}
+
+
+.jumpMessage{
+	padding-top:80px;
 	align:center;
 	text-align:center;
 	font-size:25px !important;
 }
-
 
 .jumpLeft{
 	width:100%;
