--- a/css/registercheetahG2.css
+++ b/css/registercheetahG2.css
@@ -51,11 +51,11 @@
 }
 
 .landBottomButtonStyle{	
-	width:130px; 
-	margin-left:120px;
+	width:150px; 
+	margin-left:105px;
+	margin-bottom:30px;
 	color: white;
 	background: #585858;
-	margin-bottom:30px;
 }
 
 
@@ -136,7 +136,7 @@
 
 .scanPropertyRowStyle{
 	background-color:#E9ECE9;
-	width: 100%; 
+	width: 1025px;
 	float: left;
 }
 
@@ -430,12 +430,17 @@ color:#333333;
 	width:25%;
 }
 
+.registerContent{
+	width:1025px;
+	margin-left:-5px; 
+}
+
 .rightPaneAlignmentStyle{
 	background-color:#E9ECE9;
 	margin-left: -10px;
 	margin-right:-10px !important;
-	width: 100%;
-	height:500px;
+	width: 1050px;
+	height:505px;
 }
 
 .homeIconStyle{
