--- a/css/registercheetahG2.css
+++ b/css/registercheetahG2.css
@@ -20,11 +20,11 @@
  	-webkit-box-orient:vertical;-webkit-box-direction:normal;
  	flex-direction:column;-webkit-box-pack:justify;
  	justify-content:space-between;flex-wrap:nowrap;
- 	height:503px;background-color:#e6e6e6;
+ 	height:482px;background-color:#e6e6e6;
  	-webkit-box-shadow:0 2px 14px rgba(0,0,0,.5);
  	box-shadow:0 2px 14px rgba(0,0,0,.5);
  	border-radius:8px;
- 	border:10px solid #3d86ff
+ 	border:8px solid #3d86ff;
  }
 
 .landTableStyle{
@@ -39,23 +39,37 @@
 .landMessage{
 	padding-top:0px;
 	padding-left:30px;
-	font-size:28px !important;
+	font-size:32px;
+	font-family:sans-serif;
+	line-height:38px;
+	color:#000;
 }
 
 .landRedButtonStyle{
+	width: 220px;
+	height:60px;
 	margin-top:-10px;
-	margin-left:90px;
-	width: 180px;
+	margin-left:55px;
+	line-height:20px;
 	color: white;
 	background: #FF0000;
+	font-size:30px;
+	font-family:sans-serif;
 }
 
 .landBottomButtonStyle{	
-	width:180px; 
-	margin-left:90px;
+	width:220px; 
+	height:60px;
+	margin-left:55px;
 	margin-bottom:30px;
-	color: white;
 	background: #585858;
+	-webkit-box-shadow:0 1px 1px rgba(0,0,0,.5);
+	box-shadow:0 1px 1px rgba(0,0,0,.5);
+	border:none;border-radius:5px;
+	font-size:30px;
+	font-family:sans-serif;
+	line-height:20px;
+	color:#fff;
 }
 
 
@@ -84,7 +98,7 @@
 	margin-left: -2px;
 	margin-right:0px !important;
 	width: 100%;
-	height:490px;
+	height:530px;
 }
 
 .jumpButtonLeftPadding{
