--- a/css/registercheetahG2.css
+++ b/css/registercheetahG2.css
@@ -15,8 +15,8 @@
 }
 
 .landPageStyle{
- 	position:absolute;top:0px;right:-2px;left:-2px;bottom:0px;
- 	z-index:1040;display:-webkit-box;display:flex;
+ 	position:absolute;top:0px;right:-1px;left:-1px;bottom:0px;
+ 	z-index:1038;display:-webkit-box;display:flex;
  	-webkit-box-orient:vertical;-webkit-box-direction:normal;
  	flex-direction:column;-webkit-box-pack:justify;
  	justify-content:space-between;flex-wrap:nowrap;
@@ -48,7 +48,7 @@
 	width: 220px;
 	height:60px;
 	margin-top:-10px;
-	margin-left:55px;
+	margin-left:40px;
 	line-height:20px;
 	color: white;
 	background: #FF0000;
@@ -56,10 +56,22 @@
 	font-family:sans-serif;
 }
 
-.landBottomButtonStyle{	
-	width:220px; 
+.landRedButtonSmallFontStyle{	
+	width: 300px;
 	height:60px;
-	margin-left:55px;
+	margin-top:-10px;
+	margin-left:30px;
+	line-height:20px;
+	color: white;
+	background: #FF0000;
+	font-size:20px;
+	font-family:sans-serif;
+}
+
+.landBottomButtonStyle{	
+	width:300px; 
+	height:60px;
+	margin-left:30px;
 	margin-bottom:30px;
 	background: #585858;
 	-webkit-box-shadow:0 1px 1px rgba(0,0,0,.5);
