--- a/css/registercheetahG2.css
+++ b/css/registercheetahG2.css
@@ -57,10 +57,10 @@
 }
 
 .landRedButtonSmallFontStyle{	
-	width: 300px;
+	width: 330px;
 	height:60px;
 	margin-top:-10px;
-	margin-left:30px;
+	margin-left:40px;
 	line-height:20px;
 	color: white;
 	background: #FF0000;
@@ -69,14 +69,14 @@
 }
 
 .landBottomButtonStyle{	
-	width:300px; 
+	width:330px;
 	height:60px;
-	margin-left:30px;
+	margin-left:40px;
 	margin-bottom:30px;
 	background: #585858;
 	-webkit-box-shadow:0 1px 1px rgba(0,0,0,.5);
 	box-shadow:0 1px 1px rgba(0,0,0,.5);
-	border:none;border-radius:5px;
+	border:none;
 	font-size:30px;
 	font-family:sans-serif;
 	line-height:20px;
